[package]
name = "signal-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.25.0"
anyhow = "1.0.75"
smplr-rs = {path = "../smplr-rs"}
pulseaudio-simple-device = {path = "../pulseaudio-simple-device"}
crossterm = "0.27.0"
