[package]
name = "signal-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smplr-rs = {path = "../smplr-rs"}
waveforms-rs = {path = '../waveforms-rs'}
pulseaudio-simple-device = {path = "../pulseaudio-simple-device"}
ratatui = "0.25.0"
crossterm = "0.27.0"
color-eyre = "0.6.2"
