[package]
name = "signal-generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust based signal generator"
repository = "https://github.com/ghztomash/signal-generator"
homepage = "https://tomashg.com/"
readme = "README.md"
authors = ["Tomash GHz <ghz.tomash@gmail.com>"]
keywords = ["audio", "dsp", "tui"]
categories = ["multimedia", "multimedia::audio", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# smplr-rs = {path = "../smplr-rs"}
waveforms-rs = {path = '../waveforms-rs'}
ratatui = "0.25.0"
crossterm = "0.27.0"
color-eyre = "0.6.2"
cpal = {version = "0.15", optional = true}

[features]
default = ["cpal"]
pulse = ["dep:pulseaudio-simple-device"]
cpal = ["dep:cpal"]

[target.'cfg(android)'.dependencies]
pulseaudio-simple-device = {path = "../pulseaudio-simple-device", optional = true}

[target.'cfg(macos)'.dependencies]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
